--- a/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
+++ b/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
+    {% load mathfilters %}
 <head>
     <meta charset="UTF-8">
     <title>Рецепты</title>
 </head>
 <body>
-{% for ingredient, amount in recipe.items %}
-    <p>{{ ingredient }}: {{ amount }}</p>
-{% empty %}
-    <p>Такого рецепта не знаю :(</p>
-{% endfor %}
-</body>
+    {% if servings %}
+        <p>Количество ингредиентов для {{ servings }} порций:</p>
+        {% for ingredient, amount in recipe.items %}
+            <p>{{ ingredient }}: {{ amount|mul:servings|floatformat:-1 }}</p>
+            {% empty %}
+            <p>Такого рецепта не знаю :(</p>
+        {% endfor %}
+    {% else %}
+        {% for ingredient, amount in recipe.items %}
+            <p>{{ ingredient }}: {{ amount }}</p>
+            {% empty %}
+            <p>Такого рецепта не знаю :(</p>
+        {% endfor %}
+    {% endif %}
+    </body>
 </html>
